--- a/static/package.json
+++ b/static/package.json
@@ -18,6 +18,10 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "webpack": "^2.5.1"
+    "gulp": "^3.9.1",
+    "gulp-inject": "^4.2.0",
+    "gulp-sass": "^3.1.0",
+    "webpack": "^2.5.1",
+    "webpack-stream": "^3.2.0"
   }
 }
