--- a/static/package.json
+++ b/static/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "react": "^15.5.4",
+    "react-burger-menu": "^2.0.2",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
