--- a/static/package.json
+++ b/static/package.json
@@ -10,9 +10,18 @@
   "author": "SSidletskyi",
   "license": "MIT",
   "dependencies": {
+    "griddle-react": "^1.3.1",
+    "jquery": "^3.2.1",
     "react": "^15.5.4",
     "react-burger-menu": "^2.0.2",
-    "react-dom": "^15.5.4"
+    "react-data-components": "^1.1.0",
+    "react-dom": "^15.5.4",
+    "react-inline-grid": "^0.5.3",
+    "react-modal": "^1.7.7",
+    "react-modal-box": "^1.0.3",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
+    "reactable": "^0.14.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
