--- a/static/package.json
+++ b/static/package.json
@@ -31,6 +31,9 @@
     "gulp": "^3.9.1",
     "gulp-inject": "^4.2.0",
     "gulp-sass": "^3.1.0",
+    "moment": "^2.18.1",
+    "react-bootstrap": "^0.31.0",
+    "react-datepicker": "^0.46.0",
     "webpack": "^2.5.1",
     "webpack-stream": "^3.2.0"
   }
